<resources>
    <string name="app_name">Hardware Things</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_label">Home</string>
    <string name="label">Entry</string>
    <string name="search_label">Search</string>
    <string name="docs_label">Docs</string>
    <string name="exit_label">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="harga_rp_label">Harga : Rp.</string>
    <string name="nama_label">Nama :</string>
    <string name="hardware_icon_default">Hardware Icon Default</string>
    <string name="edit_pict_label">Edit Pict</string>
    <string name="logo_label">logo</string>
    <string name="dokumentasi_p">Hardware Things adalah aplikasi sederhana untuk pencarian perangkat
        keras komputer untuk mengetahui harga perangkat keras tersebut.</string>
    <string name="dokumentasi_a"><b>Halaman Home</b> berfungsi untuk menampilkan daftar perangkat keras
        yang diinputkan.</string>
    <string name="dokumentasi_r"><b>Halaman Entry</b> berfungsi untuk menginputkan data-data perangkat
        keras</string>
    <string name="dokumentasi_g"><b>Halaman Search</b> berfungsi untuk mencari / memfilter data perangkat
        keras berdasarkan nama perangkat keras.</string>
</resources>
